--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.4.2"
 coil = "2.6.0"
+composeCompiler = "1.5.1"
 constraintlayout = "2.1.4"
 gradle = "8.0.2"
 kotlin = "1.9.0"
@@ -17,7 +18,6 @@ composeBom = "2024.04.01"
 navigation = "2.7.7"
 koin = "3.5.6"
 recyclerview = "1.3.2"
-voyagerNavigator = "1.1.0-beta02"
 kotlinxSerialization = "1.6.3"
 kotlinxDatetime = "0.5.0"
 uiTextGoogleFonts = "1.6.8"
