--- a/.github/workflows/deploy-firebase.yml
+++ b/.github/workflows/deploy-firebase.yml
@@ -17,7 +17,12 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           cache: gradle
-
+      - name: lint
+        run: ./gradlew lint
+      - name: Run Test
+        run: ./gradlew test
+      - name: Run Android Test
+        run: ./gradlew assembleAndroidTest
       - name: buildRelease
         run: ./gradlew assemble
       - name: upload artifact to Firebase App Distribution
